--- a/components/table/_table-row-cell.scss
+++ b/components/table/_table-row-cell.scss
@@ -16,7 +16,7 @@ $tier2-indent: 64px;
   height: $cell-height;
   width: 100%;
   padding: 0 $cell-padding;
-  border-bottom: 1px solid var(--color-border-subtle);
+  border-bottom: 1px solid var(--color-border-secondary);
   box-sizing: border-box;
   overflow: hidden;
   position: relative;
